--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "db:migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "better-auth": "^1.1.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
